--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,7 +10,7 @@ body {
   height: 800px;
   padding-top: 8px;
   margin: auto;
-  background-color: hsl(229, 6%, 66%);
+  background-color: hsl(0, 0%, 98%);
 }
 
 h1 {
@@ -52,7 +52,7 @@ p {
   border-radius: 1%;
   width: 320px;
   height: 200px;
-  background-color: hsl(0, 0%, 98%);
+  background-color: white;
   position: absolute;
   left: 100px;
   top: 350px;
@@ -85,7 +85,7 @@ p {
   border-radius: 1%;
   width: 320px;
   height: 200px;
-  background-color: hsl(0, 0%, 98%);
+  background-color: white;
 }
 
 .builder-h {
@@ -118,7 +118,7 @@ p {
   top: 440px;
   left: 440px;
   border-top: 2px solid hsl(34, 97%, 64%);
-  background-color: hsl(0, 0%, 98%);
+  background-color: white;
   border-radius: 1%;
   width: 320px;
   height: 200px;
@@ -154,7 +154,7 @@ p {
   top: 350px;
   right: 100px;
   border-top: 2px solid hsl(212, 86%, 64%);
-  background-color: hsl(0, 0%, 98%);
+  background-color: white;
   border-radius: 1%;
   width: 320px;
   height: 200px;
