--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -56,6 +56,7 @@ p {
   position: absolute;
   left: 100px;
   top: 350px;
+  box-shadow: 2px 10px 5px hsl(229, 6%, 66%);
 }
 
 .supervisor-h {
@@ -86,6 +87,7 @@ p {
   width: 320px;
   height: 200px;
   background-color: white;
+  box-shadow: 2px 10px 5px hsl(229, 6%, 66%);
 }
 
 .builder-h {
@@ -122,6 +124,7 @@ p {
   border-radius: 1%;
   width: 320px;
   height: 200px;
+  box-shadow: 2px 10px 5px hsl(229, 6%, 66%);
 }
 
 .karma-h {
@@ -158,6 +161,7 @@ p {
   border-radius: 1%;
   width: 320px;
   height: 200px;
+  box-shadow: 2px 10px 5px hsl(229, 6%, 66%);
 }
 
 .calculator-h {
